--- a/app/views/users/index.html.twig
+++ b/app/views/users/index.html.twig
@@ -23,14 +23,11 @@
                         <span class="invalidFeedBack">{{ emailError }}</span>
                     </td>
                 </tr>
+                {{ macros.canChangeUserPasswordTable(user) }}
 
                 <tr>
-                    <td>Heslo:</td>
-                    <td>{{ macros.canChangeUserPassword(user) }}</td>
-                </tr>
-                <tr>
                     <td>role: </td>
-                    <td>{{ session.user.role }}</td>
+                    <td>{{ user.role }}</td>
                 </tr>
             </table>
             </div>
