load comments section with ajax
- when creating new comment + size automatically update comments section

--- a/app/views/posts/show.html.twig
+++ b/app/views/posts/show.html.twig
@@ -133,7 +133,7 @@
                         if(data2.error != ''){
                             $('#commentForm')[0].reset();
                             $('#comment_message').html(data2.error);
-                           // $("#commentSection").html(data2.reloadComments);
+                            $("#commentSection").html(data2.reloadComments);
                         }
                     }
                 });
