--- a/app/views/posts/update.html.twig
+++ b/app/views/posts/update.html.twig
@@ -3,12 +3,12 @@
 {% block content %}
 <div class="container center form_back_style">
     <h1 class="text-center pt-5 ">Úprava příspěvku</h1>
-
+    <p><span class="invalidFeedBack">* - povině vyplněné</span></p>
     <form
             action="{{ constant('URLROOT')}}/posts/update/{{ post.id}}"
             method="POST">
         <div class="form-gorup mb-4 form-item">
-            <label>Nadpis</label>
+            <label><span class="invalidFeedBack">* </span>Nadpis</label>
             <input maxlength="255" class="form-control" type="text" name="title" placeholder="Titulek článku *"
                    value="{{ post.title }}" required>
             <span class="invalidFeedBack">
@@ -17,12 +17,12 @@
         </div>
 
         <div class="form-group mb-4 form-item">
-            <label>Popis článku (maximálně 255 znaků)</label>
+            <label>Krátký popis (maximálně 255 znaků)</label>
             <textarea maxlength="255" class="form-control" type="text" name="description" placeholder="Zadejte popisek">{{ post.description }}</textarea>
         </div>
 
         <div class="form-group mb-4 form-item">
-            <label>Článek</label>
+            <label><span class="invalidFeedBack">* </span>Článek</label>
             <textarea class="form-control" type="text" id="wysiwygTextArea" name="content" placeholder="Zadejte svůj příspěvek *">{{ post.content }}</textarea>
             <span class="invalidFeedBack">
                 {{ contentError }}
