--- a/app/views/posts/show.html.twig
+++ b/app/views/posts/show.html.twig
@@ -22,13 +22,7 @@
         <p>{{ post.content | raw }}</p>
         {% if post.file != '' %}
             <a target="_blank" href="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" title="">Otevřít v jiném okně</a>
-            <embed src="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" type="application/pdf" width="100%" height="600px">
-
-            <object data="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" type="application/pdf" width="100%" height="800px">
-                <p>It appears you don't have a PDF plugin for this browser.
-                    No biggie... you can <a href="resume.pdf">click here to
-                        download the PDF file.</a></p>
-            </object>
+            <embed src="{{ constant('URLROOT') }}/public/uploads/{{ post.file }}" type="application/pdf" width="100%" height="1000em">
         {% endif %}
         <br>
         
@@ -131,7 +125,6 @@
     <script>
 
         $(document).ready(submitCommentForm());
-
         /**
          * with use of ajax create a new comment
          */
