--- a/app/views/includes/navigation.inc.twig
+++ b/app/views/includes/navigation.inc.twig
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(function() {
+        $(".dropdown-toggle").dropdown();
+    });
+</script>
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -41,7 +46,9 @@
                     <li class="nav-item">
                         <span class="input-group">
                             <a class="nav-link" href="{{ constant('URLROOT')}}/users/index">
-                                <i class="fas fa-user" rel="uživatel" alt="user profile:"></i> {{ session.user.username }}({{ session.user.role }})
+                                <span class="d-inline-block text-truncate" style="max-width: 7em;">
+                                    <i class="fas fa-user" rel="uživatel" alt="user profile:"></i> {{ session.user.username }}
+                                </span>
                             </a>
                         </span>
                     </li>
